Playing with fonts

--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -1,6 +1,7 @@
 @import "normalize";
 @import "rouge-github";
 @import url('https://fonts.googleapis.com/css?family=Architects+Daughter');
+@import url('https://fonts.googleapis.com/css2?family=Train+One')
 
 /* LAYOUT STYLES */
 body {
