--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
           {{ content }}
         </section>
 
-        <aside id="sidebar">
+<!--        <aside id="sidebar">-->
 <!--          {% if site.show_downloads %}-->
 <!--            <a href="{{ site.github.zip_url }}" class="button">-->
 <!--              <small>Download</small>-->
@@ -56,8 +56,8 @@
 <!--            <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>-->
 <!--          {% endif %}-->
 
-          <p>Здесь какой-то кастомный текст.</p>
-        </aside>
+<!--          <p>Здесь какой-то кастомный текст.</p>-->
+<!--        </aside>-->
       </div>
     </div>
 
